Added more ML classifiers

--- a/test_phishing_detection_by_ml.ipynb
+++ b/test_phishing_detection_by_ml.ipynb
@@ -1560,9 +1560,17 @@
     "pred = rfe.predict(X_test)\n",
     "print(\"Accuracy by Logistic Regression after RFE is applied:\", accuracy_score(y_test,pred))\n",
     "\n",
+    "\n",
+    "rfe = RFE(nc_l,27)\n",
+    "rfe = rfe.fit(X_train, y_train)              # Train NearestCentroid with only 27 features now\n",
+    "pred = rfe.predict(X_test)\n",
+    "print(\"Accuracy by NearestCentroid after RFE is applied:\", accuracy_score(y_test,pred))\n",
+    "\n",
+    "\n",
     "rfe = RFE(mlc,27)                              \n",
     "rfe = rfe.fit(X_train, y_train)               # Train RF classifier with only 27 features now\n",
     "pred = rfe.predict(X_test)\n",
+    "\n",
     "\n",
     "# Test accuracy on reduced data\n",
     "print(\"Accuracy by MultiLayerPerceptron after RFE is applied:\", accuracy_score(y_test,pred))\n",
@@ -1579,7 +1587,7 @@
     "pred = rfe.predict(X_test)\n",
     "\n",
     "# Test accuracy on reduced data\n",
-    "print(\"Accuracy by ecisionTreeClassifier after RFE is applied:\", accuracy_score(y_test,pred))\n",
+    "print(\"Accuracy by DecisionTreeClassifier after RFE is applied:\", accuracy_score(y_test,pred))\n",
     "\n",
     "rfe = RFE(clf_xtree,27)                              \n",
     "rfe = rfe.fit(X_train, y_train)               # Train RF classifier with only 27 features now\n",
